--- a/index.css
+++ b/index.css
@@ -1,4 +1,4 @@
-*{
+* {
     padding: 0;
     margin: 0;
     outline: 0;
@@ -12,7 +12,7 @@
     overflow: hidden;
     padding-bottom: 80px;
     background-color: #051e39;
-    background: linear-gradient(#051e39,#88233a);
+    background: linear-gradient(#051e39, #88233a);
     background-repeat: no-repeat;
     background-position: 50%;
     background-size: cover;
@@ -20,7 +20,7 @@
 
 .top h1 {
     text-align: center;
-    font: 700 50px/1 UtmAvo,sans-serif;
+    font: 700 50px/1 UtmAvo, sans-serif;
     color: #ffd212;
     margin: 50px 0 18px;
     text-transform: uppercase;
@@ -28,7 +28,7 @@
     position: relative;
 }
 
-.top .topImg{
+.top .topImg {
     max-height: 200px;
     height: 120px;
 }
@@ -46,6 +46,7 @@
     margin-bottom: 37px;
     max-width: 100%;
 }
+
 .spinBoxInSide {
     overflow: hidden;
     border-radius: 10px;
@@ -76,7 +77,7 @@
     position: relative;
 }
 
-.slot-number{
+.slot-number {
     height: 100%;
 }
 
@@ -88,7 +89,7 @@
     vertical-align: middle;
 }
 
-.quaySoButon{
+.quaySoButon {
     background: #fbce3d url(./img/btn-yellow-bg.jpg) no-repeat top;
     background-size: cover;
     margin: 0 8px;
@@ -111,4 +112,52 @@
     line-height: 62px;
     -moz-appearance: none;
     appearance: none;
+}
+
+
+h3 {
+    margin: 0.1em 0;
+    position: relative;
+    display: flex;
+    align-items: baseline;
+    font-size: 178px;
+}
+
+h3+span {
+    display: block;
+    width: 100%;
+    text-align: right;
+}
+
+
+.number {
+    position: relative;
+    display: flex;
+    width: 0;
+    overflow: hidden;
+    height: 178px;
+    transition: width 1.8s ease;
+}
+
+.number>span {
+    display: flex;
+    text-align: center;
+    flex-direction: column;
+    opacity: 0;
+    flex-shrink: 2;
+    flex-basis: 178px;
+    width: 1px;
+
+    position: absolute;
+    right: 0;
+
+    line-height: 178px;
+    transition: all 2s ease;
+}
+
+.number>span.visible {
+    position: static;
+    width: 160px;
+    opacity: 1;
+    flex-shrink: 1;
 }
